[package]
name = "league-skillshot"
version = "0.1.0"
edition = "2021"
description = "League of Legends inspired skillshot game featuring Ezreal"
license = "MIT"
repository = "https://github.com/example/league-skillshot"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
]